# shaprank

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
examples/: classification--breast_cancer-dataset.ipynb  examples.py  regression--diabetes-dataset.ipynb
shaprank/: __init__.py  constants.py  engine.py  ensure.py  formatting.py  quick_start.py
shaprank/addons/: __init__.py
shaprank/addons/explain/: __init__.py  catboost.py
shaprank/calibration/: __init__.py  helpers.py  strategies.py
shaprank/criteria/: __init__.py  classification.py  definitions.py  regression.py
shaprank/evaluation/: __init__.py  classification.py  regression.py
shaprank/objectives/: __init__.py  definitions.py
tests/shaprank/: test_constants.py  test_engine.py  test_ensure.py  test_formatting.py  test_quick_start.py
tests/shaprank/calibration/: test_helpers.py  test_strategies.py
tests/shaprank/evaluation/: test_classification.py  test_regression.py
