[tool.poetry]
name = "shaprank"
version = "0.1.0"
description = ""
authors = ["Riccardo Lucchese <riccardo.lucchese@gmail.com>"]
readme = "README.md"
packages = [{include = "shaprank"}]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pandas = "^1.5.2"
isort = "^5.10.1"
pylint = "^2.15.8"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^1.5.2.221124"
ipython = "^8.7.0"
jupyter = "^1.0.0"
catboost = "^1.1.1"
black = {extras = ["jupyter"], version = "^22.12.0"}
autoflake = "^2.0.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
types-tabulate = "^0.9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
